--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+body {
+  background-color: white;
+  color: black;
+  font-family: "Archivo", sans-serif;
+  font-size: 15px;
+  font-variation-settings:"wdth" 100;
+}
 .App {
   text-align: center;
+  color: #DEDEDE;
 }
 
 .App-logo {
@@ -7,13 +15,13 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-logo {
+  display: flex;
+  scale: 75%;
+  justify-content: center;
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -21,18 +29,167 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #eae8e8;
+} */
+
+.header{
+  text-align: center;
+  padding:10px;
 }
 
+nav{
+  width:100%;
+  background-color: gray;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 50px;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+.links{
+  width: 65%;
+  display: flex;
+  justify-content: right;
+  list-style: none;
+  margin-right: 30px;
+}
+
+.links li{
+  margin-left: 20px;
+}
+
+.loggedinas{
+  font-weight:bold;
+  font-size:medium;
+  color: lightblue;
+  margin-left: 180px;
+  position: fixed;
+}
+.reviewsContainer {
+  border: 5px solid #ccc;
+  padding: 20px;
+  margin-top: 20px;
+  background-color: rgba(25, 25, 47, 20);;
+  overflow-y: auto;
+  margin-right: 20px;
+  margin-left: 35px;
+  font-family: Archivo, sans-serif;
+  border-radius: 10px;
+  width: 90%;
+}
+
+.seeMoreContainer {
+  padding-right: 170px;
+}
+.seeMore {
+  text-align: right;
+}
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gradientContainer {
+  width: 300px;
+  padding-left:550px;
+  padding-top:75px;
+}
+.gradientColor{
+  background-color:#bdbcbc;
+  background-image: linear-gradient(45deg,#BD92E2, #71BAE4, #8FDDA3, #F4F4B5);
+  background-size: 100%;
+  background-repeat: repeat;
+  background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+.footerContainer{
+  position: absolute;
+  bottom: 0;
+}
+.footer{
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
+  color:#6e6e6e
+}
+#centeredimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top:20%;
+  height:20%;
+  width: 20%;
+
+}
+
+.bar {
+  background-color: #bdbcbc;
+}
+
+#navbartext {
+  font-weight:bold;
+  font-size:medium;
+  color: white;
+}
+
+.leftSection {
+  display:inline-block;
+  padding: 15px;
+  margin-left: 100px;
+}
+.centerSpacing {
+  display:inline-block;
+  width: 500px;
+}
+.rightSection{
+  display:inline-block;
+}
+.headerStyle {
+  display:inline-block;
+  margin-right: 10px;
+}
+#profilepiceditbutton {
+  position:absolute;
+  left:18%;
+  width:2%;
+  height:8%;
+}
+ul {
+  list-style-type: none;
+  float: right;
+  margin-right: 20px;
+}
+di {
+  list-style-type: none;
+  float: right;
+  margin-right: 10px;
+  border: 3px solid #ccc; /* Add border around the ul */
+  padding: 20px; /* Add padding for spacing */
+  background: #ccc;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  font-family: Archivo, sans-serif;
+}
+li {
+  color: white;
+  display:inline;
+  padding: 20px;
+}
+
+a:link { 
+  text-decoration: none; 
+  color:white;
+} 
+a:visited { 
+  text-decoration: none; 
+  color:white;
+} 
+a:hover { 
+  text-decoration: none; 
+  color:white;
+} 
+a:active { 
+  text-decoration: none; 
 }
